# azerust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yaml  license.md  readme.md  rustfmt.toml  sqlx-data.json  test
.cargo/: config.toml
.github/workflows/: docker.yaml
crates/assert-size-attribute/: Cargo.toml
crates/assert-size-attribute/src/: lib.rs
crates/axum/: Cargo.toml
crates/axum/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: accounts.rs  characters.rs  lib.rs  realms.rs  types.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs
crates/graphql/src/models/: account.rs  mod.rs  realm.rs
crates/graphql/src/schemas/: mod.rs  mutation.rs  query.rs
crates/mysql/: Cargo.toml
crates/mysql-auth/: Cargo.toml
crates/mysql-auth/src/: accounts.rs  realms.rs
crates/mysql-characters/: Cargo.toml
crates/mysql-characters/src/: characters.rs  lib.rs
crates/mysql-world/: Cargo.toml
crates/mysql/src/: accounts.rs  lib.rs  realms.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: auth.rs  lib.rs  world.rs
crates/tide/: Cargo.toml
crates/tide/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/wow-srp/: Cargo.toml
crates/wow-srp/src/: lib.rs
scripts/: setup.sh
services/auth/: Cargo.toml
services/auth/src/: authserver.rs  conf.rs  main.rs  opt.rs  state_machine.rs  wow_bincode.rs
services/auth/src/protocol/: mod.rs  packets.rs
services/auth/src/ui/: event.rs  mod.rs  repl.rs  tui.rs
services/world/: Cargo.toml
services/world/src/: client.rs  conf.rs  main.rs  opt.rs  worldserver.rs
services/world/src/protocol/: client.rs  header_crypto.rs  mod.rs  opcodes.rs  server.rs
services/world/src/world/: mod.rs  session.rs  world.rs
