[package]
name = "azerust-axum"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-axum = "3.0.28"
axum = "0.4.5"
sqlx = "0.5.7"
async-graphql = "3.0.28"

azerust-graphql = { path = "../graphql" }
azerust-game = { path = "../game" }
