[package]
name = "game"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5.2"
async-trait = "0.1.42"
derive_more = "0.99.11"
enumflags2 = "0.7.0-preview1"
num_enum = "0.5.1"
sqlx = { version = "0.4.2", features = ["macros", "mysql"], path = "../../../sqlx" }
thiserror = "1.0.22"
wow-srp = { path = "../wow-srp" }
