[package]
name = "azerust-game"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = "0.4.19"
derive_more = "0.99"
enumflags2 = "0.7.0-preview1"
num_enum = "0.5"
rand = "0.8"
sha-1 = "0.9"
sqlx = { version = "0.5", features = ["macros", "mysql"] }
strum = "0.21"
strum_macros = "0.21"
thiserror = "1"
wow-srp = { path = "../wow-srp" }
