[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "2.9", features = ["chrono"] }
sqlx = {version = "0.5", features = ["macros", "chrono"] }
tide = "0.16"
chrono = "0.4"

game = {path = "../game"}