[package]
name = "azerust-mysql-auth"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx = { version = "0.5", features = ["mysql"] }
tracing = "0.1"
async-trait = "0.1"
wow-srp = { path = "../wow-srp" }
azerust-game = { path = "../game" }
lazy_static = "1.4"
rand = "0.8"
async-std = "1.8"
sha-1 = "0.9"
chrono = "0.4.19"
