[package]
name = "mysql"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
wow-srp = { path = "../wow-srp" }
game = { path = "../game" }
lazy_static = "1.4.0"
rand = "0.8.0"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "mysql"], path = "../../../sqlx" }
tracing = "0.1.22"
tracing-futures = "0.2.4"
