[package]
name = "mysql"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"
license = "MIT"

[dependencies]
sqlx = { version = "0.4.2", features = ["mysql"], git = "https://github.com/arlyon/sqlx.git" }
tracing = "0.1.22"
tracing-futures = "0.2.4"
async-trait = "0.1.42"
wow-srp = { path = "../wow-srp" }
game = { path = "../game" }
lazy_static = "1.4.0"
rand = "0.8.0"
async-std = "1.8.0"
sha-1 = "0.9.2"
