[package]
name = "mysql"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.5", features = ["mysql"] }
tracing = "0.1"
tracing-futures = "0.2"
async-trait = "0.1"
wow-srp = { path = "../wow-srp" }
game = { path = "../game" }
lazy_static = "1.4"
rand = "0.8"
async-std = "1.8"
sha-1 = "0.9"
