[package]
name = "tide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-tide = "2.9.15"
tide = "0.16.0"
graphql = {path = "../graphql"}
sqlx = "0.5.7"
async-graphql = "2.9.15"
game = {path = "../game"}