[package]
name = "azerust-tide"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-tide = "2.9.15"
tide = "0.16.0"
sqlx = "0.5.7"
async-graphql = "2.9.15"

azerust-graphql = {path = "../graphql"}
azerust-game = {path = "../game"}