[package]
name = "wow-srp"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.3.1"
rand = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
sha-1 = "0.9.2"
sqlx = { version = "0.4.2", git = "https://github.com/arlyon/sqlx.git" }
tracing = "0.1.22"
