[package]
name = "azerust-auth"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["macros"] }
async-trait = "0.1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "offline"] }

bincode = "2.0.0-dev"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

derive_more = "0.99"
derivative = "2"

anyhow = "1"
thiserror = "1"
human-panic = "1"

num_enum = "0.5"
static_assertions = "1"
assert-size-attribute = { path = "../../crates/assert-size-attribute" }
structopt = "0.3"
rand = "0.8"
lazy_static = "1"
num-bigint = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }

wow-srp = { path = "../../crates/wow-srp" }
azerust-game = { path = "../../crates/game" }
azerust-mysql-auth = { path = "../../crates/mysql-auth" }
azerust-axum = { path = "../../crates/axum" }
azerust-protocol = { path = "../../crates/protocol", features = ["auth"] }
enumflags2 = "0.7.0-preview1"
chrono = "0.4.19"
tokio-stream = {version="0.1.8", features=["net", "time"]}
futures-util = "0.3.19"
tokio-console = "0.1.1"
console-subscriber = "0.1.1"

[dev-dependencies]
test-case = "1"
